# muster

./: .gitignore  BAND-API-CONTRACT.md  Makefile  README.md
app/: pyproject.toml
app/agents/: commander.py
app/agents/adapters/: __init__.py  crewai_adapter.py  langgraph_adapter.py  pydantic_adapter.py
app/agents/common/: band_client.py  contract_net.py  k8s.py  policy.py  reasoner.py  responder.py  tools.py
app/cluster/: chaos.py  kind-config.yaml
app/cluster/manifests/: 00-namespaces.yaml  10-payments.yaml  20-checkout.yaml  30-catalog.yaml  40-billing-unrelated.yaml  50-rbac.yaml
app/naive/: control_agent.py
app/observatory/backend/: bus.py  runner.py  server.py
assets/: _render.mjs  _video.mjs  cover.html  deck.html
docs/: index.html
scripts/: demo.sh
spikes/: README.md  p1-band-connectivity.evidence.json  p1-band-connectivity.mjs  p2-chaos-reversibility.evidence.txt  p3-adapters-smoke.evidence.json  p3-responder-loop.evidence.json  p3_adapters_smoke.py  p3_responder_loop.py  p4-commander.evidence.json  p4_commander_loop.py  p5-observatory-http-sse.evidence.txt  p5-observatory.evidence.json  p5_observatory_runner.py  p6-blast-contrast.evidence.json  p6_blast_contrast.py  p7-safety-redteam.evidence.json  p7_safety_redteam.py  p8-contested-award.evidence.json  p8_contested_award.py  verify_coordination.py
