[project]
name = "muster"
version = "0.1.0"
description = "MUSTER — dynamically mustered, cross-framework agents that reversibly remediate a real Kubernetes incident, coordinated over Band."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "langgraph>=0.2",
    "pydantic-ai-slim>=0.0.14",
    "crewai>=0.80",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
]

[tool.uv]
package = false
